--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 				<img src="img/logo.png" alt="">
 			</a>
 			<div class="header-social">
-				<a href="instagram.html"><i class="fa fa-instagram"></i></a>
+				<a href="https://www.instagram.com/utkarsh25.04"><i class="fa fa-instagram"></i></a>
 				<a href="facebook.html"><i class="fa fa-facebook"></i></a>
 				<a href="twitter.html"><i class="fa fa-twitter"></i></a>
-				<a href="github.html"><i class="fa fa-github"></i></a>
+				<a href="https://www.github.com/utkarsh-dubey"><i class="fa fa-github"></i></a>
 				<a href="snapchat.html"><i class="fa fa-snapchat"></i></a>
 			</div>
 			<div class="nav-switch">
@@ -90,7 +90,7 @@
 			</div>
 			<div class="contact-link">
 				<p>Contact me</p>
-				<a href="instagram.html"><img src="img/contact.jpg" alt=""></a>
+				<a href="https://www.instagram.com/utkarsh25.04"><img src="img/contact.jpg" alt=""></a>
 			</div>
 		</div>
 		<!-- Hero section end -->
