--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<h2>Need a programmer? Get in touch</h2>
 				</div>
 				<div class="col-lg-3 text-lg-right text-left">
-					<div class="site-btn"><span>Read More</span></div>
+					<div class="site-btn"><span><a href="contact.html">Read More</a></span></div>
 				</div>
 			</div>
 		</div>
