--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
 					<div class="container text-white">
 						<h1> </h1>
 						<h2>UTKARSH DUBEY</h2>
-						<div class="site-btn"><span>Read More</span></div>
+						<div class="site-btn"><span><a href="home-2.html">Read More</a></span></div>
 					</div>
 				</div>
 				<div class="hs-item set-bg" data-setbg="./img/slider/2.jpg">
 					<div class="container text-white">
 						<h1> </h1>
 						<h2>B-Tech , ECE</h2>
-						<div class="site-btn"><span>Read More</span></div>
+						<div class="site-btn"><span><a href="home-2.html">Read More</a></span></div>
 					</div>
 				</div>
 			</div>
@@ -100,7 +100,7 @@
 			<div class="about-content-warp text-white">
 				<h2>Skills</h2>
 				<p>As of now I am learning , once I am done this will be updated. Your patience is highly admired.</p>
-				<div class="site-btn"><span>Read More</span></div>
+				<div class="site-btn"><span><a href="portfolio.html">Read More</a></span></div>
 			</div>
 		</div>
 		<!-- About one Section end-->
