--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<a href="facebook.html"><i class="fa fa-facebook"></i></a>
 				<a href="twitter.html"><i class="fa fa-twitter"></i></a>
 				<a href="https://www.github.com/utkarsh-dubey"><i class="fa fa-github"></i></a>
-				<a href="snapchat.html"><i class="fa fa-snapchat"></i></a>
+				<a href="https://www.linkedin/in/utkarsh2504"><i class="fa fa-linkedin"></i></a>
 			</div>
 			<div class="nav-switch">
 				<i class="fa fa-bars"></i>
