--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<div class="header-social">
 				<a href="https://www.instagram.com/utkarsh25.04"><i class="fa fa-instagram"></i></a>
 				<a href="facebook.html"><i class="fa fa-facebook"></i></a>
-				<a href="www.wa.me/+917838253578"><i class="fa fa-whatsapp"></i></a>
+				<a href="https://www.wa.me/+917838253578"><i class="fa fa-whatsapp"></i></a>
 				<a href="https://www.github.com/utkarsh-dubey"><i class="fa fa-github"></i></a>
 				<a href="https://www.linkedin.com/in/utkarsh2504"><i class="fa fa-linkedin"></i></a>
 			</div>
