--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 				<div class="col-lg-6">
 					<div class="footer-about">
 						<img src="img/logo.png" alt="">
-						<p>I am currently an undergraduate student in electronics and communication from IIITD</p>
+						<p>I am currently an undergraduate student in electronics and communication engineering from IIITD</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
