--- a/contact.html
+++ b/contact.html
@@ -45,9 +45,9 @@
 			<div class="header-social">
 				<a href="https://www.intagram.com/utkarsh25.04"><i class="fa fa-instagram"></i></a>
 				<a href="facebook.html"><i class="fa fa-facebook"></i></a>
-				<a href="twitter.html"><i class="fa fa-twitter"></i></a>
+				<a href="https://wa.me/+912838253578"><i class="fa fa-whatsapp"></i></a>
 				<a href="https://www.github.com/utkarsh-dubey"><i class="fa fa-github"></i></a>
-				<a href="snapchat.html"><i class="fa fa-snapchat"></i></a>
+				<a href="https://www.linkedin.com/in/utkarsh2504"><i class="fa fa-linkedin"></i></a>
 			</div>
 			<div class="nav-switch">
 				<i class="fa fa-bars"></i>
@@ -126,7 +126,7 @@
 				<div class="col-lg-6">
 					<div class="footer-about">
 						<img src="img/logo.png" alt="">
-						<p>I am currently an undergraduate student in electronics and communication from IIITD</p>
+						<p>I am currently an undergraduate student in electronics and communication engineering from IIITD</p>
 					</div>	
 				</div>
 				<div class="col-lg-3 col-md-6">
