--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>Porto - Photo Gallery HTML Template</title>
+	<title>Contact</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Porto Photo Gallery HTML Template">
+	<meta name="description" content="Contact">
 	<meta name="keywords" content="porto, photo, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Favicon -->
-	<link href="img/favicon.ico" rel="shortcut icon"/>
+	
 
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
