--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 					<div class="footer-info">
 						<h6>Talk to us </h6>
 						<ul>
-							<li>+91 78 38 253578</li>
+							<li>+91 78 XXXXXXXX78</li>
 							<li>dubeyutkarsh2000@gmail.com</li>
 							<li>utkarsh19213@iiitd.ac.in</li>
 						</ul>
