--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
 						<p>If you want to talk personally then make sure to fill this , once done i will contact you myself. Thank you</p>
 						<ul>
 							<li><h6>Address:</h6>New Delhi,India</li>
-							<li><h6>Phone:</h6>+91 78 38 253578</li>
+							<li><h6>Phone:</h6>+91 78 xxxxxxxx78</li>
 							<li><h6>Mail:</h6>dubeyutkarsh2000@gmail.com</li>
 						</ul>
 					</div>
@@ -132,7 +132,7 @@
 					<div class="footer-info">
 						<h6>Talk to us </h6>
 						<ul>
-							<li>+91 78 38 253578</li>
+							<li>+91 78 XXXXXXXXX78</li>
 							<li>dubeyutkarsh2000@gmail.com</li>
 							<li>utkarsh19213@iiitd.ac.in</li>
 						</ul>
