--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/ava.png" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/ava.png" alt="" >
         <h1 class="text-light"><a href="index.html">Utkarsh Dubey</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/utkarsh-dubey" class="github"><i class="bx bxl-github"></i></a>
