--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I'm currently pursuing my undergraduation in Electronic and Communication Engineering from IIITD</p>
+          <p>I'm currently pursuing my undergraduation in Electronics and Communications Engineering from IIITD</p>
         </div>
 
         <div class="row">
