--- a/index.html
+++ b/index.html
@@ -222,6 +222,22 @@
       
 
       </div>
+
+      <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/two.png" class="img-fluid" alt="">
+            <div class="portfolio-links">
+              <a href="assets/img/portfolio/two.png" data-gall="portfolioGallery" class="venobox" title="Colour Switch"><i class="bx bx-plus"></i></a>
+              <a href="https://github.com/utkarsh-dubey/Color-Switch" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+        </div>
+
+    
+
+    </div>
     </section><!-- End Portfolio Section -->
 
    
