--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
           <a href="https://github.com/utkarsh-dubey" class="github"><i class="bx bxl-github"></i></a>
           <a href="https://www.instagram.com/utkarsh25.04/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/utkarsh2504/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="assets/resume.pdf" class="file"><i class="bx bx-file"></i></a>
+          
         </div>
       </div>
 
@@ -306,7 +308,7 @@
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
-
+  <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
