--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>utkarshdubey.me</span></strong>
+        &copy; Copyright <strong><span>utkarshdubey.codes</span></strong>
       </div>
     </div>
   </footer><!-- End  Footer -->
